--- a/doc/2.md
+++ b/doc/2.md
@@ -1,6 +1,4 @@
 
-
-
 #### Jackson注解
 
 Jackson类库包含了很多注解，可以让快速建立Java类与JSON之间的关系。详细文档可以参考Jackson-Annotations。下面介绍一下常用的。
@@ -328,6 +326,7 @@ public class MainController {
 # 参考
 
 1. [jackson入门](https://blog.csdn.net/u011054333/article/details/80504154)
+1. [jackson-docs](https://github.com/FasterXML/jackson-docs)
 1. [jackson @ github](https://github.com/FasterXML/jackson-databind)
 1. [Annotations("jackson-annotations") ](https://github.com/FasterXML/jackson-annotations)
 1. [Databind ("jackson-databind") ](https://github.com/FasterXML/jackson-databind)
